The slide in index page will enable in desktop only / Some main image concepts were added / The layout of community view page and creator page on mobile were fixed / The bug in lubySelector was fixed
Former-commit-id: 285d4cffcd3586176350aa019abe8d2732d0a43d

--- a/0.current_lubycon/css/community_view.css
+++ b/0.current_lubycon/css/community_view.css
@@ -23,26 +23,21 @@
 #post_subject {
     font-size: 22px;
     color: #fff;
-    line-height: 53px;
-    height: 50px;
     font-weight: 200;
     text-align: center;
 }
+.post_subject_name {
 
+}
 .written_date {
     color: #aaaaaa;
     font-size: 14px;
     margin-left: 5px;
 }
     #post_info{
-        position:absolute;
-        right: 25px;
-        top: 15px;
-        margin-right: 5px;
         
     }
         #post_info li {
-            float:left;
             margin-left:15px;
             color:#777777;
         }
@@ -87,11 +82,8 @@
             width:100%;
         }
         #author_main h4{
-            font-weight: 200;
             height:30px;
-            font-size:26px;
             color:#eeeeee;
-            margin-top: 20px;
             text-align: center;
         }
     #post_banner #author_sub{
