--- a/0.current_lubycon/css/creators_page.css
+++ b/0.current_lubycon/css/creators_page.css
@@ -100,9 +100,7 @@
             width:100%;
         }
         #myinfo_main h4{
-            font-weight: 200;
             height:30px;
-            font-size:26px;
             color:#eeeeee;
             text-align: center;
         }
